# pydantic-ai-gepa-example

./: .env.example  .gitignore  README.md  pyproject.toml
src/prompt_optimization/: adapter.py  evals.py  run_optimization.py  task.py  test_basic.py
